--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.7",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "validator": "^10.7.1"
   }
 }
